# matrw

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: matfile_read.rs  matfile_write.rs
examples/: matfile_dbg_printer.rs  sandbox.rs
src/: lib.rs
src/interface/: error.rs  fileio.rs  helper.rs  index.rs  macros.rs  matfile.rs  mod.rs  variable.rs
src/interface/serde/: de.rs  mod.rs  ser.rs
src/interface/types/: array.rs  cell_array.rs  compressed_array.rs  matlab_types.rs  mod.rs  numeric_array.rs  sparse_array.rs  structure.rs  structure_array.rs
src/parser/: header.rs  mod.rs
src/parser/v7/: flags.rs  matfile7.rs  mod.rs  variable7.rs
src/parser/v7/types/: cell_array.rs  compressed_array.rs  empty.rs  mod.rs  numeric_array.rs  object.rs  sparse_array.rs  structure.rs  structure_array.rs
src/parser/v7/types/subelements/: array_dimensions.rs  array_fieldname.rs  array_flags.rs  array_name.rs  mod.rs
src/parser/v7/types/subelements/array_numeric_data/: array_data.rs  array_data_normal.rs  array_data_small.rs  array_data_value.rs  mod.rs  parse_write.rs
src/parser/v73/: mod.rs
tests/: example_v7.mat  example_v73.mat  example_v7_corrupt.mat  shared_functions.rs  test_compression.rs  test_file_exceptions.rs  test_index.rs  test_matlab_testcases.rs  test_octave_testcases.rs  test_print_numeric_array.rs  test_read_typed.rs  test_read_untyped.rs  test_write_typed.rs  test_write_untyped.rs
