[package]
name = "matrw"
version = "0.1.1"
categories = ["parser-implementations"]
description = "MAT-file serializing and deserializing"
repository = "https://github.com/cpfist/matrw"
edition = "2024"
keywords = ["matlab", "serialization"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
binrw = "0.13.3"
chrono = "0.4.40"
flate2 = "1.0.30"
indexmap = "2.8.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []

[dev-dependencies]
once_cell = "1.0"
criterion = "0.5"
which = "6"
rand = "0.9.2"
rand_pcg = "0.9.0"

[[bench]]
name = "matfile_read"
harness = false

[[bench]]
name = "matfile_write"
harness = false

